--- a/index.html
+++ b/index.html
@@ -503,28 +503,48 @@
      
     </section>
 
-
-    <footer class="home-footer">
-      <div class="footer-hd">
-        <img src="assets/Quantum-logo-white.png" alt="logo" />
-      </div>
-      <div class="footer-txt">
-        © 2025 Quantum + Ltd. <br />
-        All rights Reserved. <br />
-        A product of Upskill BST Team Learnable Find out more at Genesys.
-      </div>
-    </footer>
-
-  <!-- Start of Watch List Page -->
+      <!-- Start of Watch List Page -->
      <section class="list-container-small" id="listPage">
       <header class="list-header">
-        <div class="list-logo">
-         <a href="index.html"><img src="assets/Quantum-logo-white.png" alt="logo" /></a>
+         <div class="nav-section">
+      <div class="nav-menu">
+          <a href="index.html"><img src="assets/Quantum-logo-white.png" alt="Logo" /></a>
+        <div class="nav-icons">
+          <i class="bi bi-list menuIcon" ></i>
+          <i class="bi bi-search searchIcon"></i>
         </div>
-        <button class="list-close-btn" id="listCloseBtn">
-          <img src="assets/close.svg" alt="Close Icon" />
-        </button>
-        <h2 class="list-title">Watchlist</h2>
+      </div>
+
+     <div class="non-user">
+       <div class="header-list">
+         <a href="index.html"> <img src="assets/Quantum-logo-white.png" alt="logo"></a>
+        <div class="search">
+          <input type="text" placeholder="search">
+          <i class="bi bi-search searchIcon"></i>
+        </div>
+        <div class="menu-sec">
+          <i class="bi bi-list menuIcon"></i>
+          <span class="formsign-btn"><a href="#">Sign up</a></span>
+          <span class="formlog-btn"><a href="#">Login</a></span>
+        </div>
+      </div>
+     </div>
+
+      <div class="user">
+        <div class="header-list">
+         <a href="index.html"> <img src="assets/Quantum-logo-white.png" alt="logo"></a>
+        <div class="search">
+          <input type="text" placeholder="search" />
+          <i class="bi bi-search searchIcon"></i>
+        </div>
+        <div class="menu-sec">
+          <i class="bi bi-list menuIcon"></i>
+         <a href="profile.html"> <i class="bi bi-person-circle"></i></a>
+          <span><a href="#" id="logoutBtn">Logout</a></span>
+        </div>
+      </div>
+      </div>
+      </div>
       </header>
 
       <div class="list-result">
@@ -575,7 +595,7 @@
       </footer>
     </section>
 
-    <!-- START of Watch List Page FOR LARGE SCREEN -->
+       <!-- START of Watch List Page FOR LARGE SCREEN -->
      <section class="list-container" id="listPageLarge">
         <div class="header-list">
           <a href="index.html"> <img src="assets/Quantum-logo-white.png" alt="logo"></a>
@@ -594,9 +614,9 @@
       <div class="result-lg">
         <div class="list-result-lg">
           <div class="list-thumb-lg">
-            <img src="assets/rec6.png" class="img" alt="Mickey 17" />
+            <a href="#"><img src="assets/rec6.png" class="img mickey" alt="Mickey 17" /></a>
           </div>
-          <div class="list-meta-lg">
+          <div class="list-meta-lg mickey">
             <span>Mickey 17 (2025)</span>
             <span class="list-duration">2hrs</span>
           </div>
@@ -606,7 +626,7 @@
         </div>
         <div class="list-result-lg">
           <div class="list-thumb-lg">
-            <img src="assets/rec5.jpg" class="img" alt="Superman" />
+            <a href="video.html?video=video7"><img src="assets/rec5.jpg" class="img" alt="Superman" /></a>
           </div>
           <div class="list-meta-lg">
             <span>Superman (2025)</span>
@@ -640,6 +660,21 @@
         </p>
       </div>
     </section>
+
+    <footer class="home-footer">
+      <div class="footer-hd">
+        <img src="assets/Quantum-logo-white.png" alt="logo" />
+      </div>
+      <div class="footer-txt">
+        © 2025 Quantum + Ltd. <br />
+        All rights Reserved. <br />
+        A product of Upskill BST Team Learnable Find out more at Genesys.
+      </div>
+    </footer>
+
+
+
+ 
 
 
     
