--- a/index.html
+++ b/index.html
@@ -503,48 +503,16 @@
      
     </section>
 
-      <!-- Start of Watch List Page -->
+<!-- Start of Watch List Page -->
      <section class="list-container-small" id="listPage">
       <header class="list-header">
-         <div class="nav-section">
-      <div class="nav-menu">
-          <a href="index.html"><img src="assets/Quantum-logo-white.png" alt="Logo" /></a>
-        <div class="nav-icons">
-          <i class="bi bi-list menuIcon" ></i>
-          <i class="bi bi-search searchIcon"></i>
+        <div class="list-logo">
+          <img src="assets/Quantum-logo-white.png" alt="Quantum Logo" />
         </div>
-      </div>
-
-     <div class="non-user">
-       <div class="header-list">
-         <a href="index.html"> <img src="assets/Quantum-logo-white.png" alt="logo"></a>
-        <div class="search">
-          <input type="text" placeholder="search">
-          <i class="bi bi-search searchIcon"></i>
-        </div>
-        <div class="menu-sec">
-          <i class="bi bi-list menuIcon"></i>
-          <span class="formsign-btn"><a href="#">Sign up</a></span>
-          <span class="formlog-btn"><a href="#">Login</a></span>
-        </div>
-      </div>
-     </div>
-
-      <div class="user">
-        <div class="header-list">
-         <a href="index.html"> <img src="assets/Quantum-logo-white.png" alt="logo"></a>
-        <div class="search">
-          <input type="text" placeholder="search" />
-          <i class="bi bi-search searchIcon"></i>
-        </div>
-        <div class="menu-sec">
-          <i class="bi bi-list menuIcon"></i>
-         <a href="profile.html"> <i class="bi bi-person-circle"></i></a>
-          <span><a href="#" id="logoutBtn">Logout</a></span>
-        </div>
-      </div>
-      </div>
-      </div>
+        <button class="list-close-btn" id="listCloseBtn">
+          <img src="assets/close.svg" alt="Close Icon" />
+        </button>
+        <h2 class="list-title">Watchlist</h2>
       </header>
 
       <div class="list-result">
@@ -583,7 +551,6 @@
           <img src="assets/play-circle.png" alt="Play movie" />
         </button>
       </div>
-      <span class="list-msg">Hello world</span>
       <footer class="list-footer">
         <div class="list-logo">
           <img src="assets/Quantum-logo-white.png" alt="Quantum logo" />
@@ -594,8 +561,74 @@
         </p>
       </footer>
     </section>
+    <!-- End of Watch List Page -->
+    <!-- START of Watch List Page FOR LARGE SCREEN -->
+     <section class="list-container" id="listPageLarge">
+      <header class="list-header-lg">
+        <div class="list-logo-lg">
+          <img src="assets/Quantum-logo-white.png" alt="Quantum Logo" />
+        </div>
+        <form>
+          <input type="text" placeholder="Search" />
+          <i class="bi bi-search"></i>
+        </form>
+        <div class="list-nav-btns">
+          <img src="assets/hamburger.svg" alt="hamburger menu" />
+          <button class="list-sign-up">Sign Up</button>
+          <button class="list-log-in">LogIn</button>
+        </div>
+      </header>
+      <h2 class="list-title-lg">Watchlist</h2>
+      <div class="result-lg">
+        <div class="list-result-lg">
+          <div class="list-thumb-lg">
+            <img src="assets/rec6.png" class="img" alt="Mickey 17" />
+          </div>
+          <div class="list-meta-lg">
+            <span>Mickey 17 (2025)</span>
+            <span class="list-duration">2hrs</span>
+          </div>
+          <button class="list-play-btn-lg">
+            <img src="assets/play-circle.png" alt="" />
+          </button>
+        </div>
+        <div class="list-result-lg">
+          <div class="list-thumb-lg">
+            <img src="assets/rec5.jpg" class="img" alt="Superman" />
+          </div>
+          <div class="list-meta-lg">
+            <span>Superman (2025)</span>
+            <span class="list-duration">3hrs</span>
+          </div>
+          <button class="list-play-btn-lg">
+            <img src="assets/play-circle.png" alt="" />
+          </button>
+        </div>
+        <div class="list-result-lg">
+          <div class="list-thumb-lg">
+            <img src="assets/megan-small.png" class="img" alt="Megan" />
+          </div>
+          <div class="list-meta-lg">
+            <span>Megan (2025)</span>
+            <span class="list-duration">1.5hrs</span>
+          </div>
+          <button class="list-play-btn-lg">
+            <img src="assets/play-circle.png" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="list-footer-lg">
+        <div class="list-logo-lg">
+          <img src="assets/Quantum-logo-white.png" alt="Quantum logo" />
+        </div>
+        <p>
+          © 2025 Quantum + Ltd. All rights Reserved. A product of Upskill BST
+          Team learnable Find out more at Genesys
+        </p>
+      </div>
+    </section>
+    <!-- END of Watch List Page FOR LARGE SCREEN -->
 
-    
 
 
     <footer class="home-footer">
