--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
           <input type="text" placeholder="Enter your Email here" />
           <input type="text" placeholder="Enter your password here" />
 
-          <button class="enter-home">Sign up</button>
+          <a href="index.html"><button class="enter-home">Sign up</button></a>
           <p>Already a user? <a href="#" class="formlog-btn">Sign in</a></p>
         </form>
         </div>
@@ -492,7 +492,7 @@
         <input type="text" placeholder="Enter your username/Email" />
         <input type="text" placeholder="Enter your password" />
 
-        <button class="enter-home" >login</button>
+        <a href="index.html"><button class="enter-home" >login</button></a>
         <p>
           Don't have an account? <a href="#" class="formsign-btn">Sign up</a>
         </p>
